support for polygon/linestring geometry attributes (re: #3596) and removal of entity plugin re: #3654
git-svn-id: https://subversion.assembla.com/svn/smart-cs/branches/smart8polygonsupport2@9185 37136b1e-4cb1-4992-8394-573b48a9bdce